--- a/web/Assignment-5/index.html
+++ b/web/Assignment-5/index.html
@@ -8,47 +8,47 @@
 </head>
 
 <body style="background-color: blanchedalmond;">
-    <img src="navbar.jpg" alt="navbar" style="width: 80%; display: block; margin-left: auto; margin-right: auto;" usemap="#navbar">
+    <img src="navbar.jpg" alt="navbar" style=" display: block; margin-left: auto; margin-right: auto;" usemap="#navbar">
     
     <map name="navbar">
         <area 
         shape="rect" 
-        coords="10, 5, 90, 45" 
+        coords="6, 6, 95, 50" 
         target="_blank" 
         href="#" 
         alt="Home Page">
 
         <area
         shape="rect" 
-        coords="110, 5, 260, 45" 
+        coords="125, 6, 282, 50" 
         target="_blank" 
         href="Assignment-1.html" 
         alt="Assignment-1">
 
         <area
         shape="rect" 
-        coords="280, 5, 445, 45" 
+        coords="308, 6, 488, 50" 
         target="_blank" 
         href="Assignment-2.html" 
         alt="Assignment-2">
 
         <area
         shape="rect" 
-        coords="465, 5, 625, 45" 
+        coords="515, 6, 688, 50" 
         target="_blank" 
         href="Assignment-3.html" 
         alt="Assignment-3">
 
         <area
         shape="rect" 
-        coords="650, 5, 810, 45" 
+        coords="715, 6, 888, 50" 
         target="_blank" 
         href="Assignment-4.html" 
         alt="Assignment-4">
         
         <area
         shape="rect" 
-        coords="830, 5, 990, 45" 
+        coords="915, 6, 1078, 50" 
         target="_blank" 
         href="#" 
         alt="Assignment-5">
