--- a/web/Assignment-5/index.html
+++ b/web/Assignment-5/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body style="background-color: blanchedalmond;">
-    <img src="navbar.jpg" alt="navbar" style=" display: block; margin-left: auto; margin-right: auto;" usemap="#navbar">
+    <img src="navbar.jpg" alt="navbar" style="width: fit-content;display: block; margin-left: auto; margin-right: auto;" usemap="#navbar">
     
     <map name="navbar">
         <area 
