--- a/web/Assignment-4/index.html
+++ b/web/Assignment-4/index.html
@@ -11,19 +11,19 @@
     <br>
     <ol>
         <li>
-            <p>Create a Web page including HTML basic skeleton using Offline HTML
-                Editor and Online Sandbox Environment <a href="Assignment-1.html" target="_blank">Assignment-1</a></p>
+            <p style="font-size: larger;">Create a Web page including HTML basic skeleton using Offline HTML Editor and Online Sandbox Environment - <a href="Assignment-1.html" target="_blank">Assignment-1</a></p>
         </li>
         <li>
-            <p>Create a web page showing a basic html structure using character
-                Entities and span Tag <a href="Assignment-2.html" target="_blank">Assignment-2</a></p>
+            <p style="font-size: larger;">Create a web page showing a basic html structure using character Entities and span Tag - <a href="Assignment-2.html" target="_blank">Assignment-2</a></p>
         </li>
         <li>
-            <p>Live your First Web-Page on Git-Hub <a href="Assignment-3.html" target="_blank">Assignment-3</a></p>
+            <p style="font-size: larger;">Live your First Web-Page on Git-Hub - <a href="Assignment-3.html" target="_blank">Assignment-3</a></p>
         </li>
         <li>
-            <p>Create a website having list of all practical and their individual
-                practical Page links <a href="#" target="_blank">Assignment-4</a></p>
+            <p style="font-size: larger;">Create a website having list of all practical and their individual practical Page links - <a href="#" target="_blank">Assignment-4</a></p>
+        </li>
+        <li>
+            <p style="font-size: larger;">Create a Web-Page showing the use of Image-Map in the Web Application - <a href="https://ritikagarw.github.io/web/Assignment-5/" target="_blank">Assignment-5</a></p>
         </li>
     </ol>
 </body>
