--- a/web/Assignment-5/Assignment-3.html
+++ b/web/Assignment-5/Assignment-3.html
@@ -12,6 +12,6 @@
     <p>Front-end web development is everything involved in programming the user interface of a web application. Typically it refers to the Hypertext Markup Language(HTML), Cascading Style Sheets(CSS) and Javascript portion of web site production as opposed to the database or server-side programming. It encompasses everything from building a simple page of HTML text to creating complex, responsive HTML5 websites designed to be accessed via various different browsers, devicesand screen sizes.</p>
     <h2>Output</h2>
     <h3 style="text-align: center;">Live Page On GitHub</h3>
-    <img src="pic.png" alt="Assignment-3" style="width: 100%;">
+    <img src="Images/pic.png" alt="Assignment-3" style="width: 100%;">
 </body>
 </html>
