--- a/web/Assignment-5/Assignment-4.html
+++ b/web/Assignment-5/Assignment-4.html
@@ -25,6 +25,9 @@
             <p>Create a website having list of all practical and their individual
                 practical Page links <a href="#" target="_blank">Assignment-4</a></p>
         </li>
+        <li>
+            <p style="font-size: larger;">Create a Web-Page showing the use of Image-Map in the Web Application - <a href="https://ritikagarw.github.io/web/Assignment-5/" target="_blank">Assignment-5</a></p>
+        </li>
     </ol>
 </body>
 </html>
