--- a/web/Pages/Assignment-5.html
+++ b/web/Pages/Assignment-5.html
@@ -8,7 +8,7 @@
 </head>
 
 <body style="background-color: blanchedalmond;">
-    <img src="Images/navbar.jpg" alt="navbar" style="display: block; margin-left: auto; margin-right: auto;" usemap="#navbar">
+    <img src="../Images/navbar.jpg" alt="navbar" style="display: block; margin-left: auto; margin-right: auto;" usemap="#navbar">
     
     <map name="navbar">
         <area 
@@ -43,7 +43,7 @@
         shape="rect" 
         coords="715, 6, 888, 50" 
         target="_blank" 
-        href="Assignment-4.html" 
+        href="../index.html" 
         alt="Assignment-4">
         
         <area
@@ -56,35 +56,35 @@
 
     <br>
     <h1 style="text-align: center; color: rgb(255, 130, 80);">Introduction to front-end Technologies</h1>
-    <img src="Images/pic2.png" alt="Picture" style="display: block; margin-left: auto; margin-right: auto;" usemap="#tech">
+    <img src="../Images/pic2.png" alt="Picture" style="display: block; margin-left: auto; margin-right: auto;" usemap="#tech">
 
     <map name="tech">
         <area 
         shape="rect" 
         coords="19, 23, 143, 217"
         target="_blank" 
-        href="html.html" 
+        href="../Tech/html.html" 
         alt="html">
 
         <area 
         shape="rect" 
         coords="232, 23, 356, 217"
         target="_blank" 
-        href="javascript.html" 
+        href="../Tech/javascript.html" 
         alt="javascript">
 
         <area 
         shape="rect" 
         coords="19, 255, 143, 438"
         target="_blank" 
-        href="css.html" 
+        href="../Tech/css.html" 
         alt="css">
 
         <area 
         shape="rect" 
         coords="230, 292, 365, 426"
         target="_blank" 
-        href="bootstrap.html" 
+        href="../Tech/bootstrap.html" 
         alt="bootstrap">
     </map>
 
