--- a/web/Tech/bootstrap.html
+++ b/web/Tech/bootstrap.html
@@ -7,7 +7,7 @@
     <title>About BootStrap</title>
 </head>
 <body style="background-color: blanchedalmond;">
-    <img src="Images/bs_pic.png" alt="BootStrap Pic" style="width: 25%; display: block; margin-left: auto; margin-right: auto;">
+    <img src="../Images/bs_pic.png" alt="BootStrap Pic" style="width: 25%; display: block; margin-left: auto; margin-right: auto;">
     <br>
     <p style="background-color: gainsboro; padding: 10px; border-radius: 20px; font-size: larger;">Bootstrap is a free and open-source tool collection for creating responsive websites and web applications. It is the most popular HTML, CSS, and JavaScript framework for developing responsive, mobile-first web sites. It solves many problems which we had once, one of which is the cross-browser compatibility issue. Nowadays, the websites are perfect for all the browsers (IE, Firefox and Chrome) and for all sizes of screens (Desktop, Tablets, Phablets, and Phones). All thanks to Bootstrap developers -Mark Otto and Jacob Thornton of Twitter, though it was later declared to be an open-source project.</p>
 </body>
