--- a/web/Tech/css.html
+++ b/web/Tech/css.html
@@ -7,7 +7,7 @@
     <title>About CSS</title>
 </head>
 <body style="background-color: blanchedalmond;">
-    <img src="Images/css_pic.png" alt="Css Pic" style="width: 35%; display: block; margin-left: auto; margin-right: auto;">
+    <img src="../Images/css_pic.png" alt="Css Pic" style="width: 35%; display: block; margin-left: auto; margin-right: auto;">
     <br>
     <p style="background-color: gainsboro; padding: 10px; border-radius: 20px; font-size: larger;">Cascading Style Sheets, fondly referred to as CSS, is a simply designed language intended to simplify the process of making web pages presentable. CSS allows you to apply styles to web pages. More importantly, CSS enables you to do this independent of the HTML that makes up each web page. CSS is easy to learn and understood but it provides powerful control over the presentation of an HTML document.</p>
 </body>
