--- a/web/Tech/javascript.html
+++ b/web/Tech/javascript.html
@@ -7,7 +7,7 @@
     <title>About Javascript</title>
 </head>
 <body style="background-color: blanchedalmond;">
-    <img src="Images/js_pic.jpg" alt="JQuery Pic" style="width: 50%; display: block; margin-left: auto; margin-right: auto;">
+    <img src="../Images/js_pic.jpg" alt="JQuery Pic" style="width: 50%; display: block; margin-left: auto; margin-right: auto;">
     <br>
     <p style="background-color: gainsboro; padding: 10px; border-radius: 20px; font-size: larger;">jQuery is an open source JavaScript library that simplifies the interactions between an HTML/CSS document, or more precisely the Document Object Model (DOM), and JavaScript. Elaborating the terms, jQuery simplifies HTML document traversing and manipulation, browser event handling, DOM animations, Ajax interactions, and cross-browser JavaScript development. Note: The only library available today that meets the needs of both designer types and programmer types is jQuery.</p>
 </body>
