--- a/web/index.html
+++ b/web/index.html
@@ -28,6 +28,9 @@
         <li>
             <p style="font-size: larger;">Creating card layout using CSS layout properties - <a href="Pages/Assignment-6.html" target="_blank">Assignment-6</a></p>
         </li>
+        <li>
+            <p style="font-size: larger;">Create a Web-Page layout using div tags - <a href="Pages/Assignment-7.html" target="_blank">Assignment-7</a></p>
+        </li>
     </ol>
 </body>
 </html>
