--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment-4</title>
+    <title>List of Practicals</title>
 </head>
 <body style="background-color: rgba(246, 255, 127, 0.993);">
     <h1 style="text-align: center;color: rgb(255, 81, 0);">List of all Assignments</h1>
