--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List of Practicals</title>
 </head>
-<body style="background-color: rgba(246, 255, 127, 0.993);">
+<body style="background-color: goldenrod">
     <h1 style="text-align: center;color: rgb(255, 81, 0);">List of all Assignments</h1>
     <br>
     <ol>
