--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,9 @@
         <li>
             <p style="font-size: larger;">Create a Web-Page layout using div tags - <a href="Pages/Assignment-7.html" target="_blank">Assignment-7</a></p>
         </li>
+        <li>
+            <p style="font-size: larger;">Create a Web Page having Fixed Navigation Bar with the given content - <a href="Pages/Assignment-8.html" target="_blank">Assignment-8</a></p>
+        </li>
     </ol>
 </body>
 </html>
