--- a/web/index.html
+++ b/web/index.html
@@ -34,6 +34,9 @@
         <li>
             <p style="font-size: larger;">Create a Web Page having Fixed Navigation Bar with the given content - <a href="Pages/Assignment-8.html" target="_blank">Assignment-8</a></p>
         </li>
+        <li>
+            <p style="font-size: larger;">First Responsive Webpage - <a href="Pages/Assignment-9.html" target="_blank">Assignment-9</a></p>
+        </li>
     </ol>
 </body>
 </html>
