--- a/web/index.html
+++ b/web/index.html
@@ -37,6 +37,9 @@
         <li>
             <p style="font-size: larger;">First Responsive Webpage - <a href="Pages/Assignment-9.html" target="_blank">Assignment-9</a></p>
         </li>
+        <li>
+            <p style="font-size: larger;">SideBar Added to Webpage - <a href="Pages/Assignment-10.html" target="_blank">Assignment-10</a></p>
+        </li>
     </ol>
 </body>
 </html>
