--- a/web/index.html
+++ b/web/index.html
@@ -6,40 +6,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List of Practicals</title>
 </head>
-<body style="background-color: rgba(127, 251, 255, 0.993)">
+<style>
+    body{
+        background-color: rgba(127, 251, 255, 0.993);
+    }
+    .main{
+        background-color: wheat;
+        width: 80%;
+        margin: 20px auto;
+        padding: 20px;
+    }
+    .main{
+        font-size: 22px;
+        line-height: 30px;
+    }
+</style>
+<body>
     <h1 style="text-align: center;color: rgb(255, 81, 0);">List of all Assignments</h1>
+    <div class="main">
     <br>
     <ol>
         <li>
-            <p style="font-size: larger;">Create a Web page including HTML basic skeleton using Offline HTML Editor and Online Sandbox Environment - <a href="Pages/Assignment-1.html" target="_blank">Assignment-1</a></p>
+            <p>Create a Web page including HTML basic skeleton using Offline HTML Editor and Online Sandbox Environment - <a href="Pages/Assignment-1.html" target="_blank">Assignment-1</a></p>
         </li>
         <li>
-            <p style="font-size: larger;">Create a web page showing a basic html structure using character Entities and span Tag - <a href="Pages/Assignment-2.html" target="_blank">Assignment-2</a></p>
+            <p>Create a web page showing a basic html structure using character Entities and span Tag - <a href="Pages/Assignment-2.html" target="_blank">Assignment-2</a></p>
         </li>
         <li>
-            <p style="font-size: larger;">Live your First Web-Page on Git-Hub - <a href="Pages/Assignment-3.html" target="_blank">Assignment-3</a></p>
+            <p>Live your First Web-Page on Git-Hub - <a href="Pages/Assignment-3.html" target="_blank">Assignment-3</a></p>
         </li>
         <li>
-            <p style="font-size: larger;">Create a website having list of all practical and their individual practical Page links - <a href="#" target="_blank">Assignment-4</a></p>
+            <p>Create a website having list of all practical and their individual practical Page links - <a href="#" target="_blank">Assignment-4</a></p>
         </li>
         <li>
-            <p style="font-size: larger;">Create a Web-Page showing the use of Image-Map in the Web Application - <a href="Pages/Assignment-5.html" target="_blank">Assignment-5</a></p>
+            <p>Create a Web-Page showing the use of Image-Map in the Web Application - <a href="Pages/Assignment-5.html" target="_blank">Assignment-5</a></p>
         </li>
         <li>
-            <p style="font-size: larger;">Creating card layout using CSS layout properties - <a href="Pages/Assignment-6.html" target="_blank">Assignment-6</a></p>
+            <p>Creating card layout using CSS layout properties - <a href="Pages/Assignment-6.html" target="_blank">Assignment-6</a></p>
         </li>
         <li>
-            <p style="font-size: larger;">Create a Web-Page layout using div tags - <a href="Pages/Assignment-7.html" target="_blank">Assignment-7</a></p>
+            <p>Create a Web-Page layout using div tags - <a href="Pages/Assignment-7.html" target="_blank">Assignment-7</a></p>
         </li>
         <li>
-            <p style="font-size: larger;">Create a Web Page having Fixed Navigation Bar with the given content - <a href="Pages/Assignment-8.html" target="_blank">Assignment-8</a></p>
+            <p>Create a Web Page having Fixed Navigation Bar with the given content - <a href="Pages/Assignment-8.html" target="_blank">Assignment-8</a></p>
         </li>
         <li>
-            <p style="font-size: larger;">First Responsive Webpage - <a href="Pages/Assignment-9.html" target="_blank">Assignment-9</a></p>
+            <p>First Responsive Webpage - <a href="Pages/Assignment-9.html" target="_blank">Assignment-9</a></p>
         </li>
         <li>
-            <p style="font-size: larger;">SideBar Added to Webpage - <a href="Pages/Assignment-10.html" target="_blank">Assignment-10</a></p>
+            <p>Sidebar Added to Webpage - <a href="Pages/Assignment-10.html" target="_blank">Assignment-10</a></p>
         </li>
     </ol>
+    </div>
 </body>
 </html>
