--- a/web/index.html
+++ b/web/index.html
@@ -27,34 +27,34 @@
     <br>
     <ol>
         <li>
-            <p>Create a Web page including HTML basic skeleton using Offline HTML Editor and Online Sandbox Environment - <a href="web/Pages/Assignment-1.html" target="_blank">Assignment-1</a></p>
+            <p>Create a Web page including HTML basic skeleton using Offline HTML Editor and Online Sandbox Environment - <a href="Pages/Assignment-1.html" target="_blank">Assignment-1</a></p>
         </li>
         <li>
-            <p>Create a web page showing a basic html structure using character Entities and span Tag - <a href="web/Pages/Assignment-2.html" target="_blank">Assignment-2</a></p>
+            <p>Create a web page showing a basic html structure using character Entities and span Tag - <a href="Pages/Assignment-2.html" target="_blank">Assignment-2</a></p>
         </li>
         <li>
-            <p>Live your First Web-Page on Git-Hub - <a href="web/Pages/Assignment-3.html" target="_blank">Assignment-3</a></p>
+            <p>Live your First Web-Page on Git-Hub - <a href="Pages/Assignment-3.html" target="_blank">Assignment-3</a></p>
         </li>
         <li>
             <p>Create a website having list of all practical and their individual practical Page links - <a href="#" target="_blank">Assignment-4</a></p>
         </li>
         <li>
-            <p>Create a Web-Page showing the use of Image-Map in the Web Application - <a href="web/Pages/Assignment-5.html" target="_blank">Assignment-5</a></p>
+            <p>Create a Web-Page showing the use of Image-Map in the Web Application - <a href="Pages/Assignment-5.html" target="_blank">Assignment-5</a></p>
         </li>
         <li>
-            <p>Creating card layout using CSS layout properties - <a href="web/Pages/Assignment-6.html" target="_blank">Assignment-6</a></p>
+            <p>Creating card layout using CSS layout properties - <a href="Pages/Assignment-6.html" target="_blank">Assignment-6</a></p>
         </li>
         <li>
-            <p>Create a Web-Page layout using div tags - <a href="web/Pages/Assignment-7.html" target="_blank">Assignment-7</a></p>
+            <p>Create a Web-Page layout using div tags - <a href="Pages/Assignment-7.html" target="_blank">Assignment-7</a></p>
         </li>
         <li>
-            <p>Create a Web Page having Fixed Navigation Bar with the given content - <a href="web/Pages/Assignment-8.html" target="_blank">Assignment-8</a></p>
+            <p>Create a Web Page having Fixed Navigation Bar with the given content - <a href="Pages/Assignment-8.html" target="_blank">Assignment-8</a></p>
         </li>
         <li>
-            <p>First Responsive Webpage - <a href="web/Pages/Assignment-9.html" target="_blank">Assignment-9</a></p>
+            <p>First Responsive Webpage - <a href="Pages/Assignment-9.html" target="_blank">Assignment-9</a></p>
         </li>
         <li>
-            <p>Sidebar Added to Webpage - <a href="web/Pages/Assignment-10.html" target="_blank">Assignment-10</a></p>
+            <p>Sidebar Added to Webpage - <a href="Pages/Assignment-10.html" target="_blank">Assignment-10</a></p>
         </li>
     </ol>
     </div>
