Assignment-11 added to index

--- a/web/index.html
+++ b/web/index.html
@@ -56,6 +56,9 @@
         <li>
             <p>Sidebar Added to Webpage - <a href="Pages/Assignment-10.html" target="_blank">Assignment-10</a></p>
         </li>
+        <li>
+            <p>Responsive Footer Template Added - <a href="Pages/Assignment-11.html" target="_blank">Assignment-11</a></p>
+        </li>
     </ol>
     </div>
 </body>
