New index page added

--- a/web/index.html
+++ b/web/index.html
@@ -1,65 +1,195 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>List of Practicals</title>
-</head>
-<style>
-    body{
-        background-color: rgba(127, 251, 255, 0.993);
-    }
-    .main{
-        background-color: wheat;
-        width: 80%;
-        margin: 20px auto;
-        padding: 20px;
-    }
-    .main{
-        font-size: 22px;
-        line-height: 30px;
-    }
-</style>
-<body>
-    <h1 style="text-align: center;color: rgb(255, 81, 0);">List of all Assignments</h1>
-    <div class="main">
-    <br>
-    <ol>
-        <li>
-            <p>Create a Web page including HTML basic skeleton using Offline HTML Editor and Online Sandbox Environment - <a href="Pages/Assignment-1.html" target="_blank">Assignment-1</a></p>
-        </li>
-        <li>
-            <p>Create a web page showing a basic html structure using character Entities and span Tag - <a href="Pages/Assignment-2.html" target="_blank">Assignment-2</a></p>
-        </li>
-        <li>
-            <p>Live your First Web-Page on Git-Hub - <a href="Pages/Assignment-3.html" target="_blank">Assignment-3</a></p>
-        </li>
-        <li>
-            <p>Create a website having list of all practical and their individual practical Page links - <a href="#" target="_blank">Assignment-4</a></p>
-        </li>
-        <li>
-            <p>Create a Web-Page showing the use of Image-Map in the Web Application - <a href="Pages/Assignment-5.html" target="_blank">Assignment-5</a></p>
-        </li>
-        <li>
-            <p>Creating card layout using CSS layout properties - <a href="Pages/Assignment-6.html" target="_blank">Assignment-6</a></p>
-        </li>
-        <li>
-            <p>Create a Web-Page layout using div tags - <a href="Pages/Assignment-7.html" target="_blank">Assignment-7</a></p>
-        </li>
-        <li>
-            <p>Create a Web Page having Fixed Navigation Bar with the given content - <a href="Pages/Assignment-8.html" target="_blank">Assignment-8</a></p>
-        </li>
-        <li>
-            <p>First Responsive Webpage - <a href="Pages/Assignment-9.html" target="_blank">Assignment-9</a></p>
-        </li>
-        <li>
-            <p>Sidebar Added to Webpage - <a href="Pages/Assignment-10.html" target="_blank">Assignment-10</a></p>
-        </li>
-        <li>
-            <p>Responsive Footer Template Added - <a href="Pages/Assignment-11.html" target="_blank">Assignment-11</a></p>
-        </li>
-    </ol>
-    </div>
-</body>
+  </head>
+  <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"/>
+    <link rel="stylesheet" href="CSS/index-css.css">
+  <body>
+      <div class="image">
+        <img src="Images/index-back.jpg" alt="">
+      </div>
+    <table>
+      <thead>
+        <tr>
+          <th colspan="5">Fullstack Live Practical Book</th>
+        </tr>
+        <tr>
+          <th>#</th>
+          <th>Practical Name</th>
+          <th>Link</th>
+          <th>Status</th>
+          <th>Tools</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>
+            Create a Web page including HTML basic skeleton using Offline HTML
+            Editor and Online Sandbox Environment
+          </td>
+          <td class="deliver">
+            <a href="Pages/Assignment-1.html" target="_blank">Practical-1</a>
+          </td>
+          <td class="deliver">Checked</td>
+          <td>
+            <i title="Edit" class="material-icons button edit"> edit </i>
+            <i title="Delete" class="material-icons button delete"> delete </i>
+          </td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Create a web page showing a basic html structure using character
+            Entities and span Tag.</td>
+          <td class="deliver">
+            <a href="Pages/Assignment-2.html" target="_blank">Practical-2</a>
+          </td>
+          <td class="deliver">Checked</td>
+          <td>
+            <i title="Edit" class="material-icons button edit"> edit </i>
+            <i title="Delete" class="material-icons button delete"> delete </i>
+          </td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>
+            Live your First Web-Page on Git-Hub.
+          </td>
+          <td class="deliver">
+            <a href="Pages/Assignment-3.html" target="_blank">Practical-3</a>
+          </td>
+          <td class="deliver">Checked</td>
+          <td>
+            <i title="Edit" class="material-icons button edit"> edit </i>
+            <i title="Delete" class="material-icons button delete"> delete </i>
+          </td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>
+            Create a website having list of all practical and their individual
+            practical Page links.
+          </td>
+          <td class="deliver">
+            <a href="Pages/Assignment-4.html" target="_blank">Practical-4</a>
+          </td>
+          <td class="deliver">Checked</td>
+          <td>
+            <i title="Edit" class="material-icons button edit"> edit </i>
+            <i title="Delete" class="material-icons button delete"> delete </i>
+          </td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>
+            Create a Web-Page showing the use of Image-Map in the Web
+            Application.
+          </td>
+          <td class="deliver">
+            <a href="Pages/Assignment-5.html" target="_blank">Practical-5</a>
+          </td>
+          <td class="deliver">Checked</td>
+          <td>
+            <i title="Edit" class="material-icons button edit"> edit </i>
+            <i title="Delete" class="material-icons button delete"> delete </i>
+          </td>
+        </tr>
+        <tr>
+          <td>6</td>
+          <td>Create a Card Layout using CSS layout properties.</td>
+          <td class="deliver">
+            <a href="Pages/Assignment-6.html" target="_blank">Practical-6</a>
+          </td>
+          <td class="deliver">Checked</td>
+          <td>
+            <i title="Edit" class="material-icons button edit"> edit </i>
+            <i title="Delete" class="material-icons button delete"> delete </i>
+          </td>
+        </tr>
+        <tr>
+          <td>7</td>
+          <td>Create a Web Page Layout using div tags.</td>
+          <td class="deliver">
+            <a href="Pages/Assignment-7.html" target="_blank">Practical-7</a>
+          </td>
+          <td class="deliver">Checked</td>
+          <td>
+            <i title="Edit" class="material-icons button edit"> edit </i>
+            <i title="Delete" class="material-icons button delete"> delete </i>
+          </td>
+        </tr>
+        <tr>
+          <td>8</td>
+          <td>
+            Create a Web Page having Fixed Navigation Bar with the given
+            content.
+          </td>
+          <td class="deliver">
+            <a href="Pages/Assignment-8.html" target="_blank">Practical-8</a>
+          </td>
+          <td class="deliver">Checked</td>
+          <td>
+            <i title="Edit" class="material-icons button edit"> edit </i>
+            <i title="Delete" class="material-icons button delete"> delete </i>
+          </td>
+        </tr>
+        <tr>
+          <td>9</td>
+          <td>
+            Create a Responsive Web Layout with Responsive Navigation Bar.
+          </td>
+          <td class="deliver">
+            <a href="Pages/Assignment-9.html" target="_blank">Practical-9</a>
+          </td>
+          <td class="deliver">Checked</td>
+          <td>
+            <i title="Edit" class="material-icons button edit"> edit </i>
+            <i title="Delete" class="material-icons button delete"> delete </i>
+          </td>
+        </tr>
+        <tr>
+          <td>10</td>
+          <td>Create a Responsive Side-Bar Navigation Menu.</td>
+          <td class="deliver">
+            <a href="Pages/Assignment-10.html" target="_blank">Practical-10</a>
+          </td>
+          <td class="deliver">Checked</td>
+          <td>
+            <i title="Edit" class="material-icons button edit"> edit </i>
+            <i title="Delete" class="material-icons button delete"> delete </i>
+          </td>
+        </tr>
+        <tr>
+          <td>11</td>
+          <td>Responsive Footer Template Added.</td>
+          <td class="deliver">
+            <a href="Pages/Assignment-11.html" target="_blank">Practical-11</a>
+          </td>
+          <td class="deliver">Checked</td>
+          <td>
+            <i title="Edit" class="material-icons button edit"> edit </i>
+            <i title="Delete" class="material-icons button delete"> delete </i>
+          </td>
+        </tr>
+        <tr>
+          <td>12</td>
+          <td>Index page table layout.</td>
+          <td class="deliver">
+            <a href="#" target="_blank">Practical-12</a>
+          </td>
+          <td class="pending">Un-Checked</td>
+          <td>
+            <i title="Edit" class="material-icons button edit"> edit </i>
+            <i title="Delete" class="material-icons button delete"> delete </i>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </body>
 </html>
