--- a/web/index.html
+++ b/web/index.html
@@ -183,7 +183,7 @@
           <td class="deliver">
             <a href="#" target="_blank">Practical-12</a>
           </td>
-          <td class="deliver">Un-Checked</td>
+          <td class="deliver">Checked</td>
           <td>
             <i title="Edit" class="material-icons button edit"> edit </i>
             <i title="Delete" class="material-icons button delete"> delete </i>
