--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,16 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"/>
     <link rel="stylesheet" href="CSS/index-css.css">
+    <script src="JS/index-js.js"></script>
   <body>
+
+
+    <div class="loader-container" id="hide">
+      <!-- <div class="loader"></div> -->
+      <img src="Images/loader.gif" alt="">
+    </div>
+  
+    <div class="main-container">
       <div class="image">
         <img src="Images/index-back.jpg" alt="">
       </div>
@@ -191,9 +200,21 @@
         </tr>
         <tr>
           <td>13</td>
-          <td>Created a Custom Price Table Template</td>
+          <td>Created a Custom Price Table Template.</td>
           <td class="deliver">
             <a href="Pages/Assignment-13.html" target="_blank">Practical-13</a>
+          </td>
+          <td class="deliver">Checked</td>
+          <td>
+            <i title="Edit" class="material-icons button edit"> edit </i>
+            <i title="Delete" class="material-icons button delete"> delete </i>
+          </td>
+        </tr>
+        <tr>
+          <td>14</td>
+          <td>Created a Counter Website Using JavaScript.</td>
+          <td class="deliver">
+            <a href="Pages/Assignment-14.html" target="_blank">Practical-14</a>
           </td>
           <td class="pending">Un-Checked</td>
           <td>
@@ -203,5 +224,6 @@
         </tr>
       </tbody>
     </table>
+    </div>
   </body>
 </html>
