--- a/web/index.html
+++ b/web/index.html
@@ -216,6 +216,18 @@
           <td class="deliver">
             <a href="Pages/Assignment-14.html" target="_blank">Practical-14</a>
           </td>
+          <td class="deliver">Un-Checked</td>
+          <td>
+            <i title="Edit" class="material-icons button edit"> edit </i>
+            <i title="Delete" class="material-icons button delete"> delete </i>
+          </td>
+        </tr>
+        <tr>
+          <td>14</td>
+          <td>Created a form with email validation.</td>
+          <td class="deliver">
+            <a href="Pages/Assignment-15.html" target="_blank">Practical-15</a>
+          </td>
           <td class="pending">Un-Checked</td>
           <td>
             <i title="Edit" class="material-icons button edit"> edit </i>
